Added PlaManager. can load .pla files and store information from them

--- a/BDD_Distributor/BDD_Distributor.vcxproj
+++ b/BDD_Distributor/BDD_Distributor.vcxproj
@@ -130,6 +130,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlaManager.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PlaManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
