--- a/BDD_Distributor/BDD_Distributor.vcxproj
+++ b/BDD_Distributor/BDD_Distributor.vcxproj
@@ -131,11 +131,15 @@
   <ItemGroup>
     <ClCompile Include="Distributor.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Module.cpp" />
+    <ClCompile Include="ModuleManager.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="PlaManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Distributor.h" />
+    <ClInclude Include="Module.h" />
+    <ClInclude Include="ModuleManager.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="PlaManager.h" />
   </ItemGroup>
