Module indices calculates properly

--- a/BDD_Distributor/Modules/module_map.conf
+++ b/BDD_Distributor/Modules/module_map.conf
@@ -15,7 +15,7 @@ M5 Modules/Second_Level/(A or B) and C.pla
 # Second, we will tell which variable in modules is another module and which is variable
 # V means that a variable in a module represents a single binary variable and not a module
 
-M0 M1VVM2M2333M333
+M0 M1VVM2
 M1 VVM3
 M2 VM4V
 M3 M5V
