--- a/BDD_Distributor/BDD_Distributor.vcxproj.filters
+++ b/BDD_Distributor/BDD_Distributor.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="ModuleManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Divider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
