pivoted from MPI file to this

--- a/BDD_Distributor/CMakeLists.txt
+++ b/BDD_Distributor/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(
         ModuleManager.cpp
         Node.cpp
         PlaManager.cpp
+        MPIManager.cpp
 )
 
 find_package(TeDDy REQUIRED)
@@ -13,3 +14,7 @@ find_package(TeDDy REQUIRED)
 target_link_libraries(
     main PRIVATE teddy::teddy
 )
+
+# MPI
+find_package(MPI REQUIRED)
+target_link_libraries(main PUBLIC MPI::MPI_CXX)
