--- a/BDD_Distributor/Modules/module_map.conf
+++ b/BDD_Distributor/Modules/module_map.conf
@@ -3,14 +3,14 @@
 # First, we tell where are our modules placed in our directories
 # M{num} will be the names of our variables for modules where num is a number to tell them apart
 
-M0 Modules/Root/A and B or C and D.pla
+M0 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/First_Level/A and B and C.pla
 
-M1 Modules/First_Level/A or B or C.pla
-M2 Modules/First_Level/A and B and C.pla
+M1 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/First_Level/A or B or C.pla
+M2 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/First_Level/A and B and C.pla
 
-M3 Modules/Second_Level/A and B.pla
-M4 Modules/Second_Level/A or B.pla
-M5 Modules/Second_Level/(A or B) and C.pla
+M3 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/Second_Level/A and B.pla
+M4 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/Second_Level/A or B.pla
+M5 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/Second_Level/(A or B) and C.pla
 
 # Second, we will tell which variable in modules is another module and which is variable
 # V means that a variable in a module represents a single binary variable and not a module
