--- a/BDD_Distributor/Modules/module_map.conf
+++ b/BDD_Distributor/Modules/module_map.conf
@@ -3,7 +3,7 @@
 # First, we tell where are our modules placed in our directories
 # M{num} will be the names of our variables for modules where num is a number to tell them apart
 
-M0 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/First_Level/A and B and C.pla
+M0 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/Root/A and B or C and D.pla
 
 M1 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/First_Level/A or B or C.pla
 M2 /home/sefcik1/BP_projects/BDD_Distributor/BDD_Distributor/Modules/First_Level/A and B and C.pla
